--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,9 @@ jobs:
         with:
           go-version: 1.18
       -
+        name: Test
+        run: go test -v
+      -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
